Add db script and populate readme

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/ingem
-spring.datasource.username=sa
-spring.datasource.password=vir6723
+spring.datasource.username=ingem
+spring.datasource.password=test1234
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 hnb.api.url=https://api.hnb.hr/tecajn/v2?valuta=EUR
